examples/fail/semantic/assert_wrong_arg_count.bina
// EXPECT_SEMANTIC_ERROR: assert expects 1 argument
fn main() -> int {
    assert(true, false);
    return 0;
}
